# learn-antlr

./: .gitignore  Makefile  README.md  pyproject.toml
learn_antlr/parser/: Hello.interp  Hello.tokens  HelloLexer.interp  HelloLexer.py  HelloLexer.tokens  HelloParser.py  HelloVisitor.py
learn_antlr/parser/grammar_files/: Hello.g4
